feat(@open-kingdom/shared-backend-feature-email): OKRE-49 Integrated email sending
